--- a/src/gui/appSettings.qrc
+++ b/src/gui/appSettings.qrc
@@ -1,10 +1,10 @@
 <RCC>
     <qresource prefix="/">
-        <file>src/gui/mainSettings.qml</file>
-        <file>src/gui/Settings/generalSettings.qml</file>
-        <file>src/gui/Settings/appearanceSettings.qml</file>
-        <file>src/gui/Settings/exportImportSettings.qml</file>
-        <file>src/gui/Settings/editorPreferencesSettings.qml</file>
-        <file>src/gui/Settings/snippetManagementSettings.qml</file>
+        <file>mainSettings.qml</file>
+        <file>Settings/generalSettings.qml</file>
+        <file>Settings/appearanceSettings.qml</file>
+        <file>Settings/exportImportSettings.qml</file>
+        <file>Settings/editorPreferencesSettings.qml</file>
+        <file>Settings/snippetManagementSettings.qml</file>
     </qresource>
 </RCC>
